Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84457

ftbfs: qmimeprovider.cpp:649:18: error: invalid conversion

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.15.1
    • 5.15.0
    • Core: Other
    • None
    • Linux/X11
    • cdcb75c46b968dbfeb1992c6bee19aceda27da38 (qt/qtbase/dev) 0e4296b24cffa8e0eada1adcd6099f19cd0bca85 (qt/qtbase/5.15)

    Description

      qt 5.15.0 tarball compilation fails with this error message (linux/gcc 8):

      mimetypes/qmimeprovider.cpp: In constructor 'QMimeXMLProvider::QMimeXMLProvider(QMimeDatabasePrivate*, QMimeXMLProvider::InternalDatabaseEnum)':
      mimetypes/qmimeprovider.cpp:649:18: error: invalid conversion from 'const unsigned char*' to 'Bytef*' {aka 'unsigned char*'} [-fpermissive]
           zs.next_in = mimetype_database;
                        ^~~~~~~~~~~~~~~~~
      moc time/qcalendar.h
      moc io/qfile.h
      moc io/qbuffer.h
      moc io/qfiledevice.h
      moc io/qiodevice.h
      moc io/qnoncontiguousbytedevice_p.h
      moc io/qsavefile.h
      moc io/qtemporaryfile.h
      moc io/qstandardpaths.h
      moc io/qfileselector.h
      make[3]: *** [.obj/qmimeprovider.o] Error 1
      make[3]: *** Waiting for unfinished jobs....
      make[3]: Leaving directory `/usr/local/src/qt-everywhere-src-5.15.0/qtbase/src/corelib'
      make[2]: Leaving directory `/usr/local/src/qt-everywhere-src-5.15.0/qtbase/src'
      make[2]: *** [sub-corelib-make_first] Error 2
      make[1]: *** [sub-src-make_first] Error 2
      make[1]: Leaving directory `/usr/local/src/qt-everywhere-src-5.15.0/qtbase'
      make: *** [module-qtbase-make_first] Error 2
      

      a patch is available here: https://github.com/qt/qtbase/pull/37

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            jschueller Julien Schueller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes