QMimeDatabase/zlib: fix build with z_const macro empty

The next_in pointer in z_stream is defined as "z_const Bytef *" but
z_const is actually an empty macro in most builds. Since our data is
read-only constexpr, we need this const_cast to compile.

Fixes: QTBUG-84457
Change-Id: Ied637aece2a7427b8a2dfffd1612a01ae46f7c1a
Reviewed-by: David Faure <david.faure@kdab.com>
(cherry picked from commit cdcb75c46b968dbfeb1992c6bee19aceda27da38)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>